# ann-from-scratch

./: ActivationFunctions.cpp  ActivationFunctions.h  CMakeLists.txt  ConvolutionLayer.cpp  ConvolutionLayer.h  ConvolutionalNeuralNetwork.cpp  ConvolutionalNeuralNetwork.h  Helpers.cpp  Helpers.h  Kernel.cpp  Kernel.h  Layer.cpp  Layer.h  LearningAlgorithms.cpp  LearningAlgorithms.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkBridge.cpp  Neuron.cpp  Neuron.h  README.md  main.cpp  parsing.cpp  parsing.h
